--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "type": "commonjs",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "chart.js": "^4.5.1",
+    "chartjs-node-canvas": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
@@ -21,6 +23,7 @@
     "mongoose": "^8.20.1",
     "mysql2": "^3.15.3",
     "natural": "^8.1.0",
+    "pdfkit": "^0.17.2",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
